# mangaluv

./: .gitignore  .pre-commit-config.yaml  README.org
.github/workflows/: ci.yml
apps/backend/: .env.example  compose.override.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
apps/backend/services/api_gateway/: Dockerfile  pyproject.toml
apps/backend/services/api_gateway/src/api_gateway/: .env.example  __init__.py  config.py
apps/backend/services/api_gateway/src/api_gateway/routes/: healthcheck.py
apps/backend/services/api_gateway/tests/integration/: conftest.py  test_healthcheck_route.py
apps/backend/services/auth/: Dockerfile  pyproject.toml
apps/backend/services/auth/src/auth/: config.py  di.py  main.py
apps/backend/services/auth/src/auth/core/: token.py
apps/backend/services/auth/src/auth/db/migrations/: env.py
apps/backend/services/auth/src/auth/db/repositories/: base.py  user.py
apps/backend/services/auth/src/auth/routes/: auth.py  users.py
apps/backend/services/auth/src/auth/schemas/: __init__.py  auth.py
apps/backend/services/auth/src/auth/utils/: users.py
apps/backend/services/auth/tests/integration/: conftest.py  test_login.py  test_start_app.py
apps/backend/services/auth/tests/integration/types/: user.py
apps/backend/services/auth_service/: Dockerfile  pyproject.toml
apps/backend/services/auth_service/src/auth_service/: __init__.py  config.py  di.py  main.py
apps/backend/services/auth_service/src/auth_service/core/: hash.py  jwt.py  token.py
apps/backend/services/auth_service/src/auth_service/db/: conn.py  models.py
apps/backend/services/auth_service/src/auth_service/db/migrations/: env.py
apps/backend/services/auth_service/src/auth_service/db/migrations/versions/: 27f4d4145895_add_unique_user_email_field.py  55b63818f08b_create_user_table.py  8f415a06ca73_init_migration.py  a30f7892a320_add_password_field.py
apps/backend/services/auth_service/src/auth_service/db/repositories/: user.py
apps/backend/services/auth_service/src/auth_service/routes/: auth.py  users.py
apps/backend/services/auth_service/src/auth_service/schemas/: auth.py
apps/backend/services/auth_service/src/auth_service/utils/: users.py
apps/backend/services/auth_service/tests/integration/: conftest.py  test_auth_router.py  test_login.py  test_login_route.py  test_logout_route.py  test_register.py  test_register_route.py  test_start_app.py  test_user.py  test_user_routes.py
apps/backend/services/auth_service/tests/integration/types/: user.py
apps/backend/services/gateway/: Dockerfile  pyproject.toml
apps/backend/services/gateway/src/gateway/: __init__.py  config.py  main.py
apps/backend/services/gateway/src/gateway/routes/: auth.py  healthcheck.py
apps/backend/services/gateway/tests/integration/: conftest.py  test_healthcheck_route.py
apps/backend/services/manga/: .env.example  pyproject.toml
apps/backend/services/manga/src/manga/: __init__.py
apps/backend/services/manga/src/manga/application/: commands.py  dto.py  repository.py  service.py
apps/backend/services/manga/src/manga/domain/: entities.py  errors.py  models.py
apps/backend/services/manga/src/manga/infrastructure/converters/: manga.py
apps/backend/services/manga/src/manga/infrastructure/db/: conn.py  models.py  repository.py
apps/backend/services/manga/src/manga/infrastructure/db/migrations/: env.py
apps/backend/services/manga/src/manga/infrastructure/db/migrations/versions/: 2025_09_05_1909-e37e84f9c26e_initialize_migrations.py  2025_09_07_2113-14af6205eb04_add_foreign_key_column.py  2025_09_10_1555-9d3ba6bc8775_add_new_columns.py  2025_09_19_1944-a3f8457c14e7_initialize.py
apps/backend/services/manga/src/manga/presentation/api/: __init__.py  config.py  manga.py
apps/backend/services/manga/src/manga/presentation/api/di/: __init__.py  db.py
apps/backend/services/manga/src/manga/presentation/api/errors/: manga.py
apps/backend/services/manga/src/manga/presentation/api/schemas/: manga.py
apps/backend/services/manga/src/manga/presentation/cli/: __init__.py  config.py
apps/backend/services/manga/tests/integration/: conftest.py  test_manga_repository.py  test_manga_router.py
apps/backend/services/manga/tests/integration/helpers/: robyn.py
apps/backend/services/manga/tests/integration/test_api/: conftest.py
apps/backend/services/manga/tests/integration/test_cli/: conftest.py  test_manga_cli.py
apps/backend/typings/manga/application/: dto.pyi  repository.pyi  service.pyi
apps/backend/typings/manga/domain/: errors.pyi
apps/backend/typings/manga/infrastructure/converters/: manga.pyi
apps/backend/typings/manga/infrastructure/db/: conn.pyi  models.pyi  repository.pyi
apps/backend/typings/manga/presentation/api/: __init__.pyi  config.pyi  manga.pyi
apps/backend/typings/manga/presentation/api/di/: __init__.pyi  db.pyi
apps/backend/typings/manga/presentation/api/errors/: manga.pyi
apps/backend/typings/manga/presentation/api/schemas/: manga.pyi
apps/backend/typings/testcontainers/core/: __init__.pyi  config.pyi  container.pyi  docker_client.pyi  generic.pyi  network.pyi  waiting_utils.pyi
apps/backend/typings/testcontainers/postgres/: __init__.pyi
