[project]
name = "mangaluv"
version = "0.1.0"
requires-python = "==3.13.7"
dependencies = ["gateway", "auth", "manga"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
gateway = { path = "services/gateway" }
auth = { path = "services/auth" }
manga = { path = "services/manga" }

[dependency-groups]
dev = ["gateway[dev]", "auth[dev]", "manga[dev]"]
lint = ["basedpyright==1.31.0"]

[tool.basedpyright]
include = ["services"]
exclude = ["**/__pycache__", "**/.venv", "**/migrations"]
ignore = ["**/*.lock"]
reportUnusedCallResult = false
reportAny = false
reportUnknownVariableType = false

[tool.ruff]
target-version = "py313"
line-length = 80
extend-exclude = ["**/typings/"]

[tool.ruff.lint]
extend-select = ["E501", "UP", "D", "I", "PGH", "RUF", "T20"]
ignore = ["D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"**/{tests,migrations}/*" = ["D"]

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
exclude = ["**/typings/"]
