[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service"
authors = [{ name = "edpyt", email = "edrsa1321s@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi[all]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
]
