[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service"
authors = [{ name = "edpyt", email = "edrsa1321s@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
    { include-group = "migrations" },
]
migrations = ["alembic>=1.16.4", "asyncpg>=0.30.0", "pydantic-settings>=2.10.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.alembic]
script_location = "%(here)s/src/auth_service/db/migrations"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
