[build-system]
requires = ["hatchling==1.13"]
build-backend = "hatchling.build"

[project]
name = "gateway"
version = "0.1.1"
description = "Main API gateway"
authors = [{ name = "edpyt", email = "edrsa1321s@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.116.1", "pydantic-settings>=2.10.1"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1"]
