[build-system]
requires = ["hatchling==1.13"]
build-backend = "hatchling.build"

[project]
name = "manga"
version = "0.1.1b2"
description = "Main manga reader service"
authors = [{ name = "edpyt", email = "edrsa1321s@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "alembic>=1.16.5",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "robyn>=0.72.1",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
manga-api = "manga.presentation.api:start_app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.alembic]
script_location = "%(here)s/src/manga/infrastructure/db/migrations"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
