[project]
name = "manga"
version = "0.1.0"
description = "Main manga service"
authors = [{ name = "edpyt", email = "edrsa1321s@gmail.com" }]
requires-python = "==3.13.7"
dependencies = [
    "litestar[standard]>=2.18.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
